Mailman - The GNU Mailing List Management System
================================================

Copyright (C) 1998-2010 by the Free Software Foundation, Inc.
51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA

Here is a history of user visible changes to Mailman.

3.0 alpha 6 -- "Cut to the Chase"
=================================
(2010-XX-XX)


3.0 alpha 5 -- "Distant Early Warning"
======================================
(2010-01-18)

REST
----
 * Add REST API for subscription services.  You can now:

   - list all members in all mailing lists
   - subscribe (and possibly register) an address to a mailing list
   - unsubscribe an address from mailing list

Commands
--------
 * 'bin/dumpdb' is now 'bin/mailman qfile'
 * 'bin/unshunt' is now 'bin/mailman unshunt'
 * Mailman now properly handles the '-join', '-leave', and '-confirm' email
   commands and sub-addresses.  '-subscribe' and '-unsubscribe' are aliases
   for '-join' and '-leave' respectively.

Configuration
-------------
 * devmode settings now live in their own [devmode] section.
 * Mailman now searches for a configuration file using this search order.  The
   first file that exists is used.

   - -C config command line argument
   - $MAILMAN_CONFIG_FILE environment variable
   - ./mailman.cfg
   - ~/.mailman.cfg
   - /etc/mailman.cfg


3.0 alpha 4 -- "Vital Signs"
============================
(2009-11-28)

Commands
--------
 * 'bin/inject' is now 'bin/mailman inject', with some changes
 * 'bin/mailmanctl' is now 'bin/mailman start|stop|reopen|restart'
 * 'bin/mailman version' is added (output same as 'bin/mailman --version')
 * 'bin/mailman members' command line arguments have changed.  It also
   now ignores blank lines and lines that start with #.  It also no longer
   quits when it sees an address that's already subscribed.
 * 'bin/withlist' is now 'bin/mailman withlist', and its command line
   arguments have changed.
 * 'bin/mailman lists' command line arguments have changed.